--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 						</div>
 						<div class="g_item_text">
 							<a  href="https://nucampcampsites.netlify.app/" target="_blank"><h4>NuCamp Campsite</h4></a>
-							<p>React JS <a href="" target="_blank"><i class="fa fa-github"></i></a></p>
+							<p>React JS <a href="https://github.com/camilawheeler/nucampsite-react" target="_blank"><i class="fa fa-github"></i></a></p>
 						</div>
 					</div>
 				</div>
