Fixing links and details

--- a/index.html
+++ b/index.html
@@ -64,18 +64,26 @@
 								<h6>Hello Everybody, I am</h6>
 								<h3>Camila Wheeler</h3>
 								<h4>Full-Stack Developer I</h4>
-								<p>I'm an experienced software developer highly skilled in supporting the design and implementation of innovative software solutions to drive operational efficiency and business productivity. </p>
+								<p>I'm an experienced software developer highly skilled in supporting the design and
+									implementation of innovative software solutions to drive operational efficiency and
+									business productivity. </p>
 								<ul class="list basic_info">
-									<li><a><i class="lnr lnr-calendar-full"></i> March 10th, 1995</a></li>
-									<li><a href="tel:206-890-2655"><i class="lnr lnr-phone-handset"></i> +1 (206) 890-2655</a></li>
-									<li><a href="mailto:camila_wheeler@outlook.com"><i class="lnr lnr-envelope"></i> camila_wheeler@outlook.com</a></li>
+									<li><a><i class="lnr lnr-calendar-full"></i> +4 years of professional experience</a></li>
+									<li><a href="tel:206-890-2655"><i class="lnr lnr-phone-handset"></i> +1 (206)
+											890-2655</a></li>
+									<li><a href="mailto:camila_wheeler@outlook.com"><i class="lnr lnr-envelope"></i>
+											camila_wheeler@outlook.com</a></li>
 									<li><a><i class="lnr lnr-home"></i> Beaverton, OR</a></li>
 								</ul>
 								<ul class="list personal_social">
-									<li><a href="https://twitter.com/CamilaWheeler_" target="_blank"><i class="fa fa-twitter"></i></a>
+									<li><a href="https://twitter.com/CamilaWheeler_" target="_blank"><i
+												class="fa fa-twitter"></i></a>
 									</li>
 									<li><a href="https://www.linkedin.com/in/camilawheeler/" target="_blank"><i
 												class="fa fa-linkedin"></i></a></li>
+									</li>
+									<li><a href="https://github.com/camilawheeler/portfolio" target="_blank"><i
+												class="fa fa-github"></i></a></li>
 								</ul>
 							</div>
 						</div>
@@ -94,15 +102,18 @@
 					<div class="welcome_text">
 						<h4>About Myself</h4>
 						<p>Extensive knowledge applying user-centric methodologies to develop technical solutions.</p>
-						<p>Excellent analytical, communication, time management, multitasking, organizational and teamwork skills.</p>
-						<p>Proficiency in object-oriented software development, Agile methodology, relational databases, Git version control, problem-solving and cross-team collaboration.</p>
+						<p>Excellent analytical, communication, time management, multitasking, organizational and
+							teamwork skills.</p>
+						<p>Proficiency in object-oriented software development, Agile methodology, relational databases,
+							Git version control, problem-solving and cross-team collaboration.</p>
 					</div>
 				</div>
 				<div class="col-lg-6">
 					<div class="tools_expert">
 						<div class="skill_main">
 							<div class="skill_item">
-								<h4>Back-end <br /><span style="font-size: small; color: darkgrey;">Skill Level</span></h4>
+								<h4>Back-end <br /><span style="font-size: small; color: darkgrey;">Skill Level</span>
+								</h4>
 								<div class="progress_br">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="70"
@@ -111,7 +122,8 @@
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Front-end <br /><span style="font-size: small; color: darkgrey;">Skill Level</span></h4>
+								<h4>Front-end <br /><span style="font-size: small; color: darkgrey;">Skill Level</span>
+								</h4>
 								<div class="progress_br">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="60"
@@ -120,7 +132,8 @@
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Team Management <br /><span style="font-size: small; color: darkgrey;">Skill Level</span></h4>
+								<h4>Team Management <br /><span style="font-size: small; color: darkgrey;">Skill
+										Level</span></h4>
 								<div class="progress_br">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="80"
@@ -129,7 +142,8 @@
 								</div>
 							</div>
 							<div class="skill_item">
-								<h4>Corporate Software Proficiency<br /><span style="font-size: small; color: darkgrey;">Skill Level</span></h4>
+								<h4>Corporate Software Proficiency<br /><span
+										style="font-size: small; color: darkgrey;">Skill Level</span></h4>
 								<div class="progress_br">
 									<div class="progress">
 										<div class="progress-bar" role="progressbar" aria-valuenow="90"
@@ -190,7 +204,7 @@
 								<span></span>
 								<div class="media">
 									<div class="d-flex">
-										<p>January 2016 to April<br/>2017</p>
+										<p>January 2016 to April<br />2017</p>
 									</div>
 									<div class="media-body">
 										<h4>CAEZ</h4>
@@ -257,23 +271,33 @@
 			<div class="gallery_f_inner row imageGallery1">
 				<div class="col-lg-4 col-md-4 col-sm-6 brand manipul design print">
 					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/breadcrumb-trail.jpg" alt="">
-						</div>
+						<a href="https://nucampcampsites.netlify.app/" target="_blank">
+							<div class="g_img_item">
+								<img class="img-fluid" src="img/gallery/breadcrumb-trail.jpg" alt="">
+							</div>
+						</a>
 						<div class="g_item_text">
-							<a  href="https://nucampcampsites.netlify.app/" target="_blank"><h4>NuCamp Campsite</h4></a>
-							<p>React JS <a href="https://github.com/camilawheeler/nucampsite-react" target="_blank"><i class="fa fa-github"></i></a></p>
+							<a href="https://nucampcampsites.netlify.app/" target="_blank">
+								<h4>NuCamp Campsite</h4>
+							</a>
+							<p>React JS <a href="https://github.com/camilawheeler/nucampsite-react" target="_blank"><i
+										class="fa fa-github"></i></a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 brand manipul creative">
 					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/stopwatch.png" alt="">
-						</div>
+						<a href="https://stopwatch-vanillajs-cw.netlify.app/" target="_blank">
+							<div class="g_img_item">
+								<img class="img-fluid" src="img/gallery/stopwatch.png" alt="">
+							</div>
+						</a>
 						<div class="g_item_text">
-							<a  href="https://stopwatch-vanillajs-cw.netlify.app/" target="_blank"><h4>Stopwatch</h4></a>
-							<p>Vanilla JavaScript <a href="https://github.com/camilawheeler/stopwatch" target="_blank"><i class="fa fa-github"></i></a></p>
+							<a href="https://stopwatch-vanillajs-cw.netlify.app/" target="_blank">
+								<h4>Stopwatch</h4>
+							</a>
+							<p>Vanilla JavaScript <a href="https://github.com/camilawheeler/stopwatch"
+									target="_blank"><i class="fa fa-github"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -306,10 +330,13 @@
 						</div>
 						<p>Let us be social</p>
 						<ul class="list">
-							<li><a href="https://www.facebook.com/caamilawheeler/" target="_blank"><i class="fa fa-facebook"></i></a>
+							<li><a href="https://www.facebook.com/caamilawheeler/" target="_blank"><i
+										class="fa fa-facebook"></i></a>
 							</li>
-							<li><a href="https://twitter.com/CamilaWheeler_" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/camilawheeler/" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<li><a href="https://twitter.com/CamilaWheeler_" target="_blank"><i
+										class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/camilawheeler/" target="_blank"><i
+										class="fa fa-linkedin"></i></a>
 							</li>
 						</ul>
 					</aside>
