--- a/portfolio.html
+++ b/portfolio.html
@@ -87,23 +87,33 @@
 			<div class="gallery_f_inner row imageGallery1">
 				<div class="col-lg-4 col-md-4 col-sm-6 react">
 					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/breadcrumb-trail.jpg" alt="">
-						</div>
+						<a href="https://nucampcampsites.netlify.app/" target="_blank">
+							<div class="g_img_item">
+								<img class="img-fluid" src="img/gallery/breadcrumb-trail.jpg" alt="">
+							</div>
+						</a>
 						<div class="g_item_text">
-							<a  href="https://nucampcampsites.netlify.app/" target="_blank"><h4>NuCamp Campsite</h4></a>
-							<p>React JS <a href="" target="_blank"><i class="fa fa-github"></i></a></p>
+							<a href="https://nucampcampsites.netlify.app/" target="_blank">
+								<h4>NuCamp Campsite</h4>
+							</a>
+							<p>React JS <a href="https://github.com/camilawheeler/nucampsite-react" target="_blank"><i
+										class="fa fa-github"></i></a></p>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-4 col-sm-6 javascript">
 					<div class="h_gallery_item">
-						<div class="g_img_item">
-							<img class="img-fluid" src="img/gallery/stopwatch.png" alt="">
-						</div>
+						<a href="https://stopwatch-vanillajs-cw.netlify.app/" target="_blank">
+							<div class="g_img_item">
+								<img class="img-fluid" src="img/gallery/stopwatch.png" alt="">
+							</div>
+						</a>
 						<div class="g_item_text">
-							<a  href="https://stopwatch-vanillajs-cw.netlify.app/" target="_blank"><h4>Stopwatch</h4></a>
-							<p>Vanilla JavaScript <a href="https://github.com/camilawheeler/stopwatch" target="_blank"><i class="fa fa-github"></i></a></p>
+							<a href="https://stopwatch-vanillajs-cw.netlify.app/" target="_blank">
+								<h4>Stopwatch</h4>
+							</a>
+							<p>Vanilla JavaScript <a href="https://github.com/camilawheeler/stopwatch"
+									target="_blank"><i class="fa fa-github"></i></a></p>
 						</div>
 					</div>
 				</div>
@@ -160,10 +170,10 @@
 					</div>
 				</div>
 			</div> -->
-			<!-- <div class="more_btn">
+				<!-- <div class="more_btn">
 				<a class="main_btn" href="#">Load More Items</a>
 			</div> -->
-		</div>
+			</div>
 	</section>
 	<!--================End Home Gallery Area =================-->
 
