--- a/index.html
+++ b/index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-2XY4VNNZ0V"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-2XY4VNNZ0V');
+	</script>
 	<!-- Required meta tags -->
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -68,7 +77,8 @@
 									implementation of innovative software solutions to drive operational efficiency and
 									business productivity. </p>
 								<ul class="list basic_info">
-									<li><a><i class="lnr lnr-calendar-full"></i> +4 years of professional experience</a></li>
+									<li><a><i class="lnr lnr-calendar-full"></i> +4 years of professional experience</a>
+									</li>
 									<li><a href="tel:206-890-2655"><i class="lnr lnr-phone-handset"></i> +1 (206)
 											890-2655</a></li>
 									<li><a href="mailto:camila_wheeler@outlook.com"><i class="lnr lnr-envelope"></i>
